term 3 and 4 changes